# Capture

./: .gitignore  CLAUDE.md  CMakeLists.txt
resources/: app.rc  resources.qrc
resources/styles/: dark.css
src/capture/: AudioCaptureDevice.cpp  AudioCaptureDevice.h  VideoCaptureDevice.cpp  VideoCaptureDevice.h
src/config/: HotkeyManager.cpp  HotkeyManager.h  SettingsManager.cpp  SettingsManager.h
src/core/: CaptureController.cpp  CaptureController.h  RecordingController.cpp  RecordingController.h  main.cpp
src/encoding/: EncoderFactory.cpp  EncoderFactory.h  Mp4Writer.cpp  Mp4Writer.h
src/ui/: HotkeyCaptureLineEdit.cpp  HotkeyCaptureLineEdit.h  MainWindow.cpp  MainWindow.h  RegionSelector.cpp  RegionSelector.h  ScreenshotOptionsDialog.cpp  ScreenshotOptionsDialog.h  TrayIconManager.cpp  TrayIconManager.h  WindowPicker.cpp  WindowPicker.h
src/utils/: Logger.cpp  Logger.h
